...
        android:textSize="@dimen/text_size_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/long_card_number" />

    <com.judopay.view.JudoEditText
        android:id="@+id/cardNumberEditText"
        style="@style/Widget.Judo.CardNumber"
        android:background="@null"
        android:hint="@string/card_number_label"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
